..F....... [ZBXNEXT-3807] fixed wrong coloring of navigation tree item with no map in dashboard edit mode

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -4614,6 +4614,7 @@ tr.cursor-move {
 				}
 			}
 
+			&.no-map,
 			&.inaccessible {
 				> .tree-row {
 					> .content {
